--- a/src_latex/content/analisi.tex
+++ b/src_latex/content/analisi.tex
@@ -14,7 +14,7 @@ Facendo una breve ricerca nei maggiori gruppi universitari, gli argomenti in cui
     \item Documenti e strumenti utili da avere sempre a portata di mano: il badge universitario, il QR per la mensa e le varie applicazioni UniPD.
 \end{itemize}
 
-\subsection{Analisi del target di utenza}
+\subsection{Analisi del target di utenza}\label{analisi_utenza}
 
 L'utenza sarà principalmente formata da studenti del CdL in Informatica. Data la vicinanza geografica con i dipartimenti di Matematica, Fisica e Ingegneria nulla vieta anche ai loro studenti di visitare il nostro sito per ottenere alcune informazioni utili.\\
 Dall'analisi appena fatta quindi possiamo aspettarci degli utenti consapevoli nell'utilizzo dei loro strumenti, con aggiornamenti frequenti e attuali, curiosi nel provare nuove funzionalità offerte dai software. Per questo il nostro sito potrà utilizzare senza troppi rischi nuovi standard.\\
