--- a/src_latex/content/prestazioni.tex
+++ b/src_latex/content/prestazioni.tex
@@ -1,10 +1,10 @@
 \section{Prestazioni e SEO}
 
-Le prestazioni di un sito sono fondamentali per avere un buon posizionamento sui vari motodi di ricerca, quindi si è deciso di:
+Le prestazioni di un sito sono fondamentali per avere un buon posizionamento nei vari canali comunicativi e motori di ricerca, quindi si è deciso di:
 \begin{itemize}
-    \item Minimizzare tutti i file javascript e css.
+    \item Minimizzare tutti i file Javascript e CSS.
     \item Sviluppare il codice PHP in \textit{early return style} per diminuire il più possibile i tempi di esecuzione.
-    \item Utilizzare standard moderni come \textit{WebP} per ridurre il più possibile il peso delle immagini senza perdere qualità.
-    \item Impostato regole di caching più efficaci per i contenuti statici in \textit{htaccess}.
-    \item Usato il più possibile i consigli di Google Lighthouse (rispettando sempre la separazione tra contenuto e presentazione,ad  esempio: no inlining di regole css fondamentali), ottenendo sempre 100\% in tutte le categorie tranne prestazioni in cui comunque si ottiene 100\% nella maggioranza delle pagine e un 95\% nelle peggiori.
+    \item Utilizzare standard moderni come \textit{WebP} per ridurre il più possibile il peso delle immagini senza perdità qualità.
+    \item Impostato regole di caching più efficaci per i contenuti statici nel file di configurazione \texttt{htaccess}.
+    \item Usato il più possibile i consigli di \textit{Google Lighthouse} (rispettando sempre la separazione tra contenuto e presentazione, ad  esempio: no \textit{inlining} di regole CSS fondamentali). Nei nostri test abbiamo sempre ottenuto il punteggio massimo, 100\%, in tutte le categorie tranne prestazioni in cui comunque si ottiene 100\% nella maggioranza delle pagine e un 95\% nelle peggiori.
 \end{itemize}
