--- a/src_latex/content/implementazione.tex
+++ b/src_latex/content/implementazione.tex
@@ -54,3 +54,10 @@ I \texttt{DTO} contenuti in \textit{lib/orm/dto/} invece forniscono le operazion
 \subsubsection{Target dei form}
 Dentro la cartella \textit{app} sono presenti tutti i file PHP che si occupano di gestire i target dei form e quindi l'interazione tra utente e i dati messi a disposizione dell'applicativo.\\
 Questi file si occupano inoltre di eseguire la sanitizzazione dell'input dell'utente, che esso sia malevolo o inconsapevole. Vengono \textit{strippati} i vari tag HTML e tutto il codice che potrebbe causare problemi al processore dei dati.
+
+\subsubsection{Il database}
+Il database, ha il compito di salvare a lungo termine e rendere velocemente fruibili tutti i dati utilizzati  dalle parti dinamiche del sito. Come descritto nei capitoli superiori queste sono principalmente suddivise in: utenti, commenti, aule studio e corsi.
+Oltre alle categorie di dati principali, abbiamo memorizzato all'interno del database i collegamenti alle immagini con annessi testi alternativi, atti a garantire l'accessibilità anche con il contenuto dinamico.
+La scelta di memorizzare questi ultimi è data dall'iniziale pensiero di implementare una pagina amministratore\footnote{Vedi sezione \ref{sviluppi_futuri}} dalla quale poter gestire senza particolari competenze i contenuti del sito, ad esempio aggiungere nuove aule sutudio o cambiare informazioni dei corsi.
+
+Il database è stato chiaramente sviluppato rispettando la forma norrmale, garantendo quindi che i dati al suo interno siano sempre coerenti.
