--- a/src_latex/content/sviluppi_futuri.tex
+++ b/src_latex/content/sviluppi_futuri.tex
@@ -1,2 +1,2 @@
-\section{Sviluppi futuri}
+\section{Sviluppi futuri}\label{sviluppi_futuri}
 Purtroppo a causa dell'assenza di un componente del gruppo non siamo riusciti a portare a termine tutte le funzionalità che avevamo programmato ad inizio progetto. Inizialmente avevamo infatti immaginito di permettere all'utente amministratore di inserire corsi e aule studio. Infatti il codice per l'inserimento e la generazione delle pagine dedicate ad essi è già totalmente dinamico e pronto per eventuali estensioni future.
