--- a/src_latex/main.tex
+++ b/src_latex/main.tex
@@ -26,7 +26,7 @@
 \begin{document}
 
 \begin{center}
-	\textbf{\Huge{Unihelp@Unipd}}\\
+	\textbf{\Huge{UniHelp@UniPD}}\\
 \end{center}
 
 \vspace{1.5cm}
