--- a/src_latex/main.tex
+++ b/src_latex/main.tex
@@ -56,7 +56,7 @@
 \begin{center}
 	\textbf{\Large{Informazioni sul sito}}\\
 	\textbf{Login consegna:} elpasqua \\
-	\textbf{Indirizzo sito web:} \url{https://tecweb.studenti.math.unipd.it/elpasqua}\\
+	\textbf{Indirizzo sito web:} \url{http://tecweb.studenti.math.unipd.it/elpasqua}\\
 	\textbf{Email referente gruppo:} alessandro.massarenti@studenti.unipd.it\\
     \vspace{1cm}
     \textbf{Accessi interni al sito}
